--- a/Info.html
+++ b/Info.html
@@ -17,12 +17,15 @@
 
     <div class="wrapper">
         <header>
-            <img src="images/header.jpg">
             <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="classes.html" class="current">Classes</a></li>
-                    <li><a href="register.html">Register</a></li>
+                 <ul>
+                    <li>
+                        <a href="index.html" class="current">Home</a></li>
+                    <li>    <a href="Info.html">Information</a></li>
+                    <li>    <a href="classes.html">FAQ</a>
+                    <li>    <a href="classes.html">About us</a>
+                    <li>    <a href="ContactUs.html">Contact us</a>
+                    </li>
                 </ul>
             </nav>
 
