--- a/register(copy 1).html
+++ b/register(copy 1).html
@@ -4,22 +4,19 @@
 <head>
     <title>IMS222 HTML/CSS Exercise</title>
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="ContactUs.css">
+    <link rel="stylesheet" href="register.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header>
+            <img src="images/header.jpg">
             <nav>
                 <ul>
-                    <li>
-                        <a href="index.html" class="current">Home</a></li>
-                    <li>    <a href="Info.html">Information</a></li>
-                    <li>    <a href="register.html">FAQ</a>
-                    <li>    <a href="register.html">About us</a>
-                    <li>    <a href="register.html">Contact us</a>
-                    </li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="classes.html">Classes</a></li>
+                    <li><a href="register.html" class="current">Register</a></li>
                 </ul>
             </nav>
 
