--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 <ul>
                     <li>
                         <a href="index.html" class="current">Home</a></li>
-                    <li>    <a href="classes.html">Classes</a></li>
-                    <li>    <a href="register.html">Register</a>
+                    <li>    <a href="Info.html">Information</a></li>
+                    <li>    <a href="FAQ.html">FAQ</a>
+                    <li>    <a href="AboutUs.html">About us</a>
+                    <li>    <a href="ContactUs.html">Contact us</a>
                     </li>
                 </ul>
             </nav>
