--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>IMS222 HTML/CSS Exercise</title>
@@ -12,16 +12,18 @@
     <div class="wrapper">
 
         <!-- 2. add <header> for image/navigation bar here -->
-        <header>
-           <h1> The Struggles of AI in the Workplace</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html" class="current">Home</a></li>
-                    <li>    <a href="Info.html">Information</a></li>
-                    <li>    <a href="FAQ.html">FAQ</a>
-                    <li>    <a href="AboutUs.html">About us</a>
-                    <li>    <a href="ContactUs.html">Contact us</a>
+<header>
+    <h1>The Struggles of AI in the Workplace</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="Info.html">Information</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="AboutUs.html">About us</a></li>
+            <li><a href="ContactUs.html">Contact us</a></li>
+        </ul>
+    </nav>
+</header>
                     </li>
                 </ul>
             </nav>
