--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>IMS222 HTML/CSS Exercise</title>
@@ -12,74 +12,27 @@
     <div class="wrapper">
 
         <!-- 2. add <header> for image/navigation bar here -->
-        <header>
-           <h1> The Struggles of AI in the Workplace</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html" class="current">Home</a></li>
-                    <li>    <a href="Info.html">Information</a></li>
-                    <li>    <a href="FAQ.html">FAQ</a>
-                    <li>    <a href="AboutUs.html">About us</a>
-                    <li>    <a href="ContactUs.html">Contact us</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- main body -->
-        <!-- 3. add <section> whose class is "courses" here -->
-        <section class="courses">
-            <!-- 4. add the first <article> of <section> inside <section></section> -->
-            <article>
-                <figure>
-                    <img src="images/bok-choi.jpg" alt="bok-choi image" />
-                    <figcaption>Bok Choi</figcaption>
-                </figure>
-                <hgroup>
-                    <h2>Japanese Vegetarian</h2>
-                    <h3> Four week course in Oxford</h3>
-                </hgroup>
-                <p> A four week introduction to triditional Japanese vegetarian meals, teaching you a selection of rice and noodle dishes</p>
-            </article>
-
-            <!-- 5. copy the following second <article> of <section> inside <section></section> -->
-            <article>
-                <figure>
-                    <img src="images/teriyaki.jpg" />
-                    <figcaption>Teriyaki Sauce</figcaption>
-                </figure>
-                <hgroup>
-                    <h2>Sauces Masterclass</h2>
-                    <h3>One day workshop</h3>
-                </hgroup>
-                <p>An intensive one-day course looking at how to create the most delicious sauces for use in a range of Japanese cookery.</p>
-            </article>
-        </section>
-        <!-- 6. add sidebar here using <aside> tag-->
-        <aside>
-            <!-- 7. add the first <article> inside <aside></aside>  -->
-            <article class="popular-recipies">
-                <h2>Popular Recipies</h2>
-                <a href="">Yakitori</a>
-                <a href="">Tsukune</a>
-                <a href=""> Okomoniyaki</a>
-                <a href=""> Mizutaki</a>
-            </article>
-            <!-- 8. copy and paste of the following second <article> code inside <aside></aside> -->
-            <article class="contact">
-                <h2>Contact</h2>
-                <p>Yoko's Kitchen<br />
-                    801 E. High St<br />
-                    Oxford, OH<br />
-                </p>
-            </article>
-        </aside>
+<header>
+    <h1>The Struggles of AI in the Workplace</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="Info.html">Information</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="AboutUs.html">About us</a></li>
+            <li><a href="ContactUs.html">Contact us</a></li>
+        </ul>
+    </nav>
+</header>
+                    <h1>About Us!</h1>
+                    <h5>Our team is composed of 5 students analyzing the effects of AI in the workplace.</h5>
         <!-- 9. add footer here -->
         <footer>
             &copy;2025 Yoko's Kitchen
 
         </footer>
     </div>
+    
 </body>
 
 </html>
