--- a/FAQ.html
+++ b/FAQ.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>IMS222 HTML/CSS Exercise</title>
@@ -17,12 +17,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="current">Home</a></li>
-                    <li>    <a href="Info.html">Information</a></li>
-                    <li>    <a href="FAQ.html">FAQ</a>
-                    <li>    <a href="AboutUs.html">About us</a>
-                    <li>    <a href="ContactUs.html">Contact us</a>
-                    </li>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="Info.html">Information</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="AboutUs.html">About us</a></li>
+            <li><a href="ContactUs.html">Contact us</a></li>
                 </ul>
             </nav>
         </header>
