--- a/Info.html
+++ b/Info.html
@@ -44,30 +44,31 @@
                     </tr>
                     <tr id="passed">
                         <td> August 2, 2025</td>
-                        <td> Yakitori</td>
-                        <td>Olivia Jenkins</td>
-                        <td>$40</td>
+                        <td> Future of AI</td>
+                        <td>Megan Gregory</td>
+                        <td>FREE</td>
                     </tr>
+                    
 
 
                     <!-- 2. copy the following code for the remaining three rows inside <table></table>-->
                     <tr>
                         <td>March 18, 2026</td>
-                        <td>Okonomiyaki</td>
-                        <td>Ashley Bell</td>
-                        <td>$50</td>
+                        <td>AI development</td>
+                        <td>Gavin Stark</td>
+                        <td>FREE</td>
                     </tr>
                     <tr>
                         <td>June 25, 2026</td>
-                        <td>Mizutaki</td>
+                        <td>What AI is</td>
                         <td>Joey Gomez</td>
-                        <td>$55</td>
+                        <td>FREE</td>
                     </tr>
                     <tr>
                         <td>September 18, 2026</td>
-                        <td>Bok Choi</td>
-                        <td>Hanna Watkins</td>
-                        <td>$50</td>
+                        <td>AI impact</td>
+                        <td>Marko Deric</td>
+                        <td>FREE</td>
                     </tr>
                 </table>
 
@@ -75,24 +76,69 @@
         </section>
         <aside>
             <article class="popular-recipes">
-                <h2>Popular Recipes</h2>
-                <a href="">Yakitori</a>
-                <a href="">Tsukune</a>
-                <a href="">Okonomiyaki</a>
-                <a href="">Mizutaki</a>
+                <h2>What we cover</h2>
+                <a href="">AI development</a>
+                <a href="">Teaching others</a>
+                <a href="">The impact of AI</a>
+                <a href="">Future of AI</a>
             </article>
             <article class="contact">
                 <h2>Contact</h2>
-                <p>Yoko's Kitchen<br />
+                <p>Ai in Business<br />
                     801 E. High St<br />
                     Oxford, OH<br />
                 </p>
             </article>
         </aside>
         <footer>
-            &copy; 2025 Yoko's Kitchen
+            &copy; 2025 Ai in business
         </footer>
     </div>
 </body>
+    <html>
+    <article>
+        <h1>Business in AI</h1>
+
+        <!-- Add your 400-word content here -->
+        <div class="ai-info">
+  <h2>Business in Artificial Intelligence</h2>
+  <p>
+    Artificial Intelligence, or AI, has become one of the most talked about technologies in business today. Everywhere you look,
+    companies are finding new ways to use AI to save time, lower costs, and improve how they serve their customers. When I first
+    started learning about AI, I honestly thought it was just about robots or futuristic things from movies. But after reading
+    more, I’ve realized that it’s already part of almost everything we do in business from online shopping to banking to
+    marketing.
+  </p>
+
+  <p>
+    One of the biggest ways AI is used in business is through data. Companies collect a ton of information every day from
+    customers, sales, and social media. AI helps analyze all that data quickly and find patterns that humans might miss. For
+    example, it can tell a business which products are selling best or predict what customers might want next. This is how
+    platforms like Amazon or Netflix give such accurate recommendations they use AI to study your behavior and suggest things
+    you’re most likely to like or buy.
+  </p>
+
+  <p>
+    Another huge area is automation. AI can do simple or repetitive tasks that used to take humans a lot of time, like answering
+    customer questions or sorting through spreadsheets. Some companies even use AI chatbots to handle customer service. It saves
+    money and lets employees focus on more creative or important work. Of course, this also raises concerns about jobs being
+    replaced by machines, which is something a lot of people including me still think about. I think the challenge is figuring
+    out how to use AI responsibly so that it helps workers instead of replacing them.
+  </p>
+
+  <p>
+    Learning about AI in business has made us realize that technology isn’t just for computer scientists or engineers. It’s for
+    everyone. Even people studying marketing, management, or finance need to understand how AI is changing the workplace. I think
+    it’s exciting and a little intimidating at the same time because it’s growing so fast. But overall, we believe AI can be a tool
+    that helps businesses become smarter and more efficient as long as people keep thinking critically about how it’s used.
+  </p>
+</div>
+
+        
+    </article>
+
+
+
 
 </html>
+
