--- a/Info.html
+++ b/Info.html
@@ -99,21 +99,21 @@
     <article>
         <h1>Business in AI</h1>
 
-        <!-- Add your 400-word content here -->
+        <!-- Add your word content here -->
         <div class="ai-info">
   <h2>Business in Artificial Intelligence</h2>
   <p>
     Artificial Intelligence, or AI, has become one of the most talked about technologies in business today. Everywhere you look,
-    companies are finding new ways to use AI to save time, lower costs, and improve how they serve their customers. When I first
-    started learning about AI, I honestly thought it was just about robots or futuristic things from movies. But after reading
-    more, I’ve realized that it’s already part of almost everything we do in business from online shopping to banking to
+    companies are finding new ways to use AI to save time, lower costs and improve how they serve their customers. When we first
+    started learning about AI, we honestly thought it was just about robots or futuristic things from movies. But after reading
+    more, we all realized that it’s already part of almost everything we do in business from online shopping to banking to
     marketing.
   </p>
 
   <p>
     One of the biggest ways AI is used in business is through data. Companies collect a ton of information every day from
-    customers, sales, and social media. AI helps analyze all that data quickly and find patterns that humans might miss. For
-    example, it can tell a business which products are selling best or predict what customers might want next. This is how
+    customers, sales and social media. AI helps analyze all that data quickly and find patterns that humans might miss. For
+    example; it can tell a business which products are selling best or predict what customers might want next. This is how
     platforms like Amazon or Netflix give such accurate recommendations they use AI to study your behavior and suggest things
     you’re most likely to like or buy.
   </p>
@@ -122,13 +122,13 @@
     Another huge area is automation. AI can do simple or repetitive tasks that used to take humans a lot of time, like answering
     customer questions or sorting through spreadsheets. Some companies even use AI chatbots to handle customer service. It saves
     money and lets employees focus on more creative or important work. Of course, this also raises concerns about jobs being
-    replaced by machines, which is something a lot of people including me still think about. I think the challenge is figuring
+    replaced by machines, which is something a lot of people including our team still thinks about. We think the challenge is figuring
     out how to use AI responsibly so that it helps workers instead of replacing them.
   </p>
 
   <p>
     Learning about AI in business has made us realize that technology isn’t just for computer scientists or engineers. It’s for
-    everyone. Even people studying marketing, management, or finance need to understand how AI is changing the workplace. I think
+    everyone. Even people studying marketing, management, or finance need to understand how AI is changing the workplace. We think
     it’s exciting and a little intimidating at the same time because it’s growing so fast. But overall, we believe AI can be a tool
     that helps businesses become smarter and more efficient as long as people keep thinking critically about how it’s used.
   </p>
@@ -141,4 +141,5 @@
 
 
 </html>
+
 
