--- a/FAQ.html
+++ b/FAQ.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <title>IMS222 HTML/CSS Exercise</title>
@@ -17,65 +17,34 @@
             <nav>
                 <ul>
                     <li>
-            <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="Info.html">Information</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
-            <li><a href="AboutUs.html">About us</a></li>
-            <li><a href="ContactUs.html">Contact us</a></li>
+                        <a href="index.html" class="current">Home</a></li>
+                    <li>    <a href="Info.html">Information</a></li>
+                    <li>    <a href="FAQ.html">FAQ</a>
+                    <li>    <a href="AboutUs.html">About us</a>
+                    <li>    <a href="ContactUs.html">Contact us</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-        <!-- main body -->
-        <!-- 3. add <section> whose class is "courses" here -->
         <section class="courses">
-            <!-- 4. add the first <article> of <section> inside <section></section> -->
             <article>
-                <figure>
-                    <img src="images/bok-choi.jpg" alt="bok-choi image" />
-                    <figcaption>Bok Choi</figcaption>
-                </figure>
                 <hgroup>
-                    <h2>Japanese Vegetarian</h2>
-                    <h3> Four week course in Oxford</h3>
+                    <h2>Will AI replace human jobs?</h2>
                 </hgroup>
-                <p> A four week introduction to triditional Japanese vegetarian meals, teaching you a selection of rice and noodle dishes</p>
-            </article>
-
-            <!-- 5. copy the following second <article> of <section> inside <section></section> -->
-            <article>
-                <figure>
-                    <img src="images/teriyaki.jpg" />
-                    <figcaption>Teriyaki Sauce</figcaption>
-                </figure>
-                <hgroup>
-                    <h2>Sauces Masterclass</h2>
-                    <h3>One day workshop</h3>
-                </hgroup>
-                <p>An intensive one-day course looking at how to create the most delicious sauces for use in a range of Japanese cookery.</p>
+                <p>	While not all jobs will be fully replaced by AI some will be significantly altered. AI is a great tool for repetitive or straightforward tasks however it can't think for itself humans will have to be there to fact check. AI is also opening doors for new jobs in AI development and machine learning. </p>
+                <h2>How does AI enhance productivity?</h2>
+                <p>AI can be useful for many things, including repetitive tasks. AI can speed up the process by taking previous work and duplicating it in the blink of an eye. This will speed up productivity and leave more time in the day for further progression in more creative aspects.
+	Something AI is really good at is forecasting. It's able to predict future results to help businesses prepare and properly allocate resources.
+</p>
+           <h2>Can AI make mistakes?</h2>
+           <p>Yes, AI makes mistakes all the time. AI is just a computer and doesn't have a brain for itself. Just like human communication, things can get lost in translation. AI can misunderstand things from both the user and the sources it gets its “information” from. AI takes other online resources that have been published before compiling them together and making its own summary. If what has been published before is wrong, AI won't know that.</p>
+           <h2>How important is human oversight?</h2>
+           <p>Human oversight is very important when it comes to the use of AI. AI is never guaranteed to be correct therefore humans must check its work. AI can be biased resulting in unethical results. AI should be used as a tool for repetitive tasks or clearing up confusion rather than a short cut for doing all the work.
+</p>
             </article>
         </section>
-        <!-- 6. add sidebar here using <aside> tag-->
-        <aside>
-            <!-- 7. add the first <article> inside <aside></aside>  -->
-            <article class="popular-recipies">
-                <h2>Popular Recipies</h2>
-                <a href="">Yakitori</a>
-                <a href="">Tsukune</a>
-                <a href=""> Okomoniyaki</a>
-                <a href=""> Mizutaki</a>
-            </article>
-            <!-- 8. copy and paste of the following second <article> code inside <aside></aside> -->
-            <article class="contact">
-                <h2>Contact</h2>
-                <p>Yoko's Kitchen<br />
-                    801 E. High St<br />
-                    Oxford, OH<br />
-                </p>
-            </article>
-        </aside>
-        <!-- 9. add footer here -->
         <footer>
-            &copy;2025 Yoko's Kitchen
+            &copy;2025 AI in Business
 
         </footer>
     </div>
