--- a/ContactUs.html
+++ b/ContactUs.html
@@ -1,83 +1,71 @@
-<!DOCTYPE html> 
-<html>
-
-<head>
-    <title>IMS222 HTML/CSS Exercise</title>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="ContactUs.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
-
 <body>
     <div class="wrapper">
         <header>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html" class="current">Home</a></li>
-                    <li>    <a href="Info.html">Information</a></li>
-                    <li>    <a href="register.html">FAQ</a>
-                    <li>    <a href="register.html">About us</a>
-                    <li>    <a href="register.html">Contact us</a>
-                    </li>
-                </ul>
-            </nav>
-
+            <img src="oxfordtree.png" alt="The Struggles of AI in the Workplace" style="width: 600px; display: block; margin: 0 auto;">
         </header>
-        <section class="courses">
-            <article>
-                <h1>Course Registration </h1>
-                <!-- 1. write <form> and <fieldset> tag here -->
-                <form action="https://formspree.io/f/xgvnvzrn" method="post" name="register" id="register">
-                   <fieldset>
-                <!-- 2. write the first <label> and <input> tag for Class Name: here -->
-                <label for="classname">Class Name:</label>
-                <input type="text" name="classname" id=classname required><br>
 
-                <!-- 3. copy the following code for the remaining form elements -->
-             
-                <label for="name">Your Name:</label>
-                <input type="text" name="name" id="name" required><br>
-                <label for="email">E-Mail:</label>
-                <input type="email" name="email" id="email" required><br>
-                <label for="phone">Phone Number:</label>
-                <input type="tel" name="phone" id="phone" placeholder="999-999-9999" required><br>
-                <label for="hearaboutus">How did you hear about us?</label>
-                <select name="hearaboutus" id="hearaboutus" required>
-                    <option value="magazine">Magazine Ad</option>
-                    <option value="radio">Radio Ad</option>
-                    <option value="tv">TV Ad</option>
-                    <option value="social">Social Media</option>
-                </select>
-                <label for="questions">Questions/Comments:</label>
-                <textarea name="questions" id="questions" rows="5"></textarea>
-                <label>&nbsp;</label>
-                <!-- 4. write code for submit button here -->
-                <input type="submit" id="submit" value="Submit">
-                </fieldset> 
-                </form>
-            </article>
-        </section>
-        <aside>
-            <article class="popular-recipes">
-                <h2>Popular Recipes</h2>
-                <a href="">Yakitori</a>
-                <a href="">Tsukune</a>
-                <a href="">Okonomiyaki</a>
-                <a href="">Mizutaki</a>
-            </article>
-            <article class="contact">
-                <h2>Contact</h2>
-                <p>Yoko's Kitchen<br />
-                    801 E. High St<br />
-                    Oxford, OH<br />
-                </p>
-            </article>
-        </aside>
+        <!-- CONTENT BOX START -->
+        <div class="content-box">
+            <section class="contact-section">
+                <article>
+                    <h1>Contact Us</h1>
+                    <p>If you have questions, comments, or would like to collaborate, please reach out using the form below.</p>
+
+                    <!-- Contact Form -->
+                    <form action="https://formspree.io/f/movknbpb" method="POST" id="contact-form">
+                        <fieldset>
+                            <label for="name">Your Name:</label>
+                            <input type="text" id="name" name="name" required><br>
+
+                            <label for="email">Email Address:</label>
+                            <input type="email" id="email" name="email" required><br>
+
+                            <label for="subject">Subject:</label>
+                            <input type="text" id="subject" name="subject" required><br>
+
+                            <label for="message">Message:</label>
+                            <textarea id="message" name="message" rows="5" required></textarea><br>
+
+                            <input type="submit" id="submit" value="Send Message">
+                        </fieldset>
+
+                        <!-- FormSubmit.co settings -->
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="thankyou.html">
+                    </form>
+                </article>
+
+                <!-- Google Map -->
+                <article>
+                    <h2>Find Us</h2>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.705071594292!2d-84.74056468460355!3d39.50724107948281!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884038eafc9e7061%3A0x97c5f1b682fd35a8!2sMiami%20University!5e0!3m2!1sen!2sus!4v1696616041965!5m2!1sen!2sus"
+                        width="100%"
+                        height="350"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Google Map showing Miami University in Oxford, Ohio">
+                    </iframe>
+                </article>
+
+                <!-- Contact Info -->
+                <article class="contact-info">
+                    <h2>Our Office</h2>
+                    <p>
+                        Miami University<br>
+                        552 E. Spring St<br>
+                        Oxford, OH 45056<br>
+                        Phone: (123)-456-7890
+                    </p>
+                </article>
+            </section>
+        </div>
+        <!-- CONTENT BOX END -->
+
         <footer>
-            &copy; 2025 Yoko's Kitchen
+            &copy; 2025 AI in Business
         </footer>
     </div>
 </body>
-
-</html>
