--- a/AboutUs.html
+++ b/AboutUs.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>IMS222 HTML/CSS Exercise</title>
+    <title>AboutUS</title>
     <link rel="stylesheet" href="AboutUs.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- 1. add <div class="wrapper"> here and move </div> to line 51 right above </body> -->
     <div class="wrapper">
 
-        <!-- 2. add <header> for image/navigation bar here -->
 <header>
     <h1>The Struggles of AI in the Workplace</h1>
     <nav>
@@ -24,11 +22,40 @@
         </ul>
     </nav>
 </header>
-                    <h1>About Us!</h1>
-                    <h5>Our team is composed of 5 students analyzing the effects of AI in the workplace.</h5>
+                    <h1  style="text-align: center;">About Us!</h1>
+                    <h5  style="text-align: center;">Our team is composed of 5 students analyzing the effects/struggles of  AI in the workplace.</h5>
+                    <h6  style="text-align: center;">AI can automate many facets of the workplace, automating systems that used to take human production and creativity to produce. The landscape of AI is advancing at a rapid rate as well, so we are in the context of what can be done today, it is subject to be expanded upon in the near future. While this is significant, there is debate on the implications of substituting human work for an automated system. However, if we look at things from a business perspective, AI usage could rapidly cut costs and make the workplace more efficient for the owner, as well as the employees. We are outlining in the following pages the ability to use AI for the practices of business.
+</h6>
+                    <img src="marko.png" alt="Marko" style="width:140px" class="center" >
+                                        <h4 style="text-align: center;">Marko Deric</h4>
+                                                                                <h6 style="text-align: center;">Major/Minor (if applicable): Emerging Technology + Business Design</h6>
+                                                                                <h6 style="text-align: center;">Age: 21</h6>
+                                                                                <h6 style="text-align: center;">Opinion on AI:  I think AI is an excellent tool because it makes researchingand gathering information much faster and more efficient. It helps me quickly find reliable insights, organize ideas, and explore topics I might not have discovered on my own, making learning and problem solving a lot easier. </h6>
+                    <img src="megan.png" alt="Megan" style="width:140px" class="center" >
+                                        <h4 style="text-align: center;">Megan Gregory</h4>
+                                                                                <h6 style="text-align: center;">Major/Minor (if applicable): Media and Communications / Minor in Emerging Technology + Business Design</h6>
+                                                                                <h6 style="text-align: center;">Age: 21</h6>
+                                                                                <h6 style="text-align: center;">Opinion on AI: I think it is a good tool that we have now. Some people might abuse its privileges, but it has many tools to help us in many ways.</h6>
+                    <img src="matt.png" alt="Matt" style="width:140px" class="center" >
+                                        <h4 style="text-align: center;">Matthew McStowe</h4>
+                                                                                <h6 style="text-align: center;">Major/Minor (if applicable): Emerging Technology + Business Design</h6>
+                                                                                <h6 style="text-align: center;">Age: 19</h6>
+                                                                                <h6 style="text-align: center;">Opinion on AI: AI is remanufacturing old works into ‘new’ works, the ethics of that are in question.</h6>
+                    <img src="zoe.png" alt="Zoe" style="width:140px" class="center" >
+                                        <h4 style="text-align: center;">Zoe Fleischer</h4>
+                                                                                <h6 style="text-align: center;">Major/Minor (if applicable): Sports Media + Communication / Minor in Business</h6>
+                                                                                <h6 style="text-align: center;">Age: 19</h6>
+                                                                                <h6 style="text-align: center;">Opinion on AI: I like it but im worried it can be abused.</h6>
+                    <img src="gavin.png" alt="Gavin" style="width:140px" class="center" >
+                                        <h4 style="text-align: center;">Gavin Stark</h4>
+<h6 style="text-align: center;">Major/Minor (if applicable): Sports Communications + Journalism</h6>
+<h6 style="text-align: center;">Age: 19</h6>
+<h6 style="text-align: center;">Opinion on AI: huge fan, it is the future.</h6> 
+
+
         <!-- 9. add footer here -->
         <footer>
-            &copy;2025 Yoko's Kitchen
+            &copy;Group B
 
         </footer>
     </div>
