FInal FAQ page uplaod

--- a/FAQ.html
+++ b/FAQ.html
@@ -26,7 +26,11 @@
                 </ul>
             </nav>
         </header>
+        <!-- main body -->
+        <img src="question%20mark.jpg" height="200" width="200">
+        <!-- 3. add <section> whose class is "courses" here -->
         <section class="courses">
+            <!-- 4. add the first <article> of <section> inside <section></section> -->
             <article>
                 <hgroup>
                     <h2>Will AI replace human jobs?</h2>
@@ -37,14 +41,17 @@
 	Something AI is really good at is forecasting. It's able to predict future results to help businesses prepare and properly allocate resources.
 </p>
            <h2>Can AI make mistakes?</h2>
-           <p>Yes, AI makes mistakes all the time. AI is just a computer and doesn't have a brain for itself. Just like human communication, things can get lost in translation. AI can misunderstand things from both the user and the sources it gets its “information” from. AI takes other online resources that have been published before compiling them together and making its own summary. If what has been published before is wrong, AI won't know that.</p>
+           <p>Yes, AI makes mistakes all the time. AI is just a computer and doesn't have a brain for itself. Just like human communication, things can get lost in translation. AI can misunderstand things from both the user and the sources it its its “information” from</p>
            <h2>How important is human oversight?</h2>
-           <p>Human oversight is very important when it comes to the use of AI. AI is never guaranteed to be correct therefore humans must check its work. AI can be biased resulting in unethical results. AI should be used as a tool for repetitive tasks or clearing up confusion rather than a short cut for doing all the work.
+           <p>Human oversight is very important when it comes to the use of AI. AI is never guaranteed to be correct therefore humans must check its work. AI can be biased resulting in unethical results. AI should be used as a tool rather than a short cut.
 </p>
             </article>
         </section>
+        <!-- 6. add sidebar here using <aside> tag-->
+ 
+        <!-- 9. add footer here -->
         <footer>
-            &copy;2025 AI in Business
+            &copy;2025 Group B
 
         </footer>
     </div>
